fix(booking): get applied discounts